github/emissary/emissary-envoy.yaml
layered_runtime:
  layers:
    - name: static_layer
      static_layer:
        envoy.reloadable_features.no_extension_lookup_by_name: false
        re2.max_program_size.error_level: 200
static_resources:
  clusters:
    - alt_stat_name: '127_0_0_1_8877'
      connect_timeout: 3.000s
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_127_0_0_1_8877_emissary
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8877
                      protocol: TCP
      name: cluster_127_0_0_1_8877_emissary
      type: STRICT_DNS
    - alt_stat_name: http3_service_emissary_7000
      connect_timeout: 3.000s
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: cluster_https___http3_service_emissary_7000_otls_emissary
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: http3-service.emissary
                      port_value: 7000
                      protocol: TCP
      name: cluster_https___http3_service_emissary_7000_otls_emissary
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          '@type': >-
            type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: >-
                    /ambassador/snapshots/emissary/secrets-decoded/tls-secret/B832AF12D65E6DFA23E8546C1192F5E0C5A4AF94.crt
                private_key:
                  filename: >-
                    /ambassador/snapshots/emissary/secrets-decoded/tls-secret/B832AF12D65E6DFA23E8546C1192F5E0C5A4AF94.key
            tls_params:
              tls_minimum_protocol_version: TLSv1_3
            validation_context:
              trusted_ca:
                filename: /etc/custom-ca-cert/ca.pem
      type: STRICT_DNS
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
          protocol: UDP
      filter_chains:
        - filter_chain_match:
            transport_protocol: quic
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      log_format:
                        text_format_source:
                          inline_string: >
                            ACCESS [%START_TIME%] "%REQ(:METHOD)%
                            %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
                            %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED%
                            %BYTES_SENT% %DURATION%
                            %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                            "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%"
                            "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%"
                            "%UPSTREAM_HOST%"
                      path: /dev/fd/1
                codec_type: HTTP3
                http3_protocol_options: {}
                http_filters:
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
                http_protocol_options:
                  accept_http_10: false
                normalize_path: true
                preserve_external_request_id: false
                route_config:
                  virtual_hosts:
                    - domains:
                        - '*'
                      name: emissary-ingress-https-listener-udp-*
                      routes:
                        - match:
                            case_sensitive: true
                            headers:
                              - exact_match: https
                                name: x-forwarded-proto
                            prefix: /ambassador/v0/check_ready
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          route:
                            cluster: cluster_127_0_0_1_8877_emissary
                            prefix_rewrite: /ambassador/v0/check_ready
                            priority: null
                            timeout: 10.000s
                        - match:
                            case_sensitive: true
                            prefix: /ambassador/v0/check_ready
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          redirect:
                            https_redirect: true
                        - match:
                            case_sensitive: true
                            headers:
                              - exact_match: https
                                name: x-forwarded-proto
                            prefix: /ambassador/v0/check_alive
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          route:
                            cluster: cluster_127_0_0_1_8877_emissary
                            prefix_rewrite: /ambassador/v0/check_alive
                            priority: null
                            timeout: 10.000s
                        - match:
                            case_sensitive: true
                            prefix: /ambassador/v0/check_alive
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          redirect:
                            https_redirect: true
                        - match:
                            case_sensitive: true
                            headers:
                              - exact_match: https
                                name: x-forwarded-proto
                            prefix: /
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_https___http3_service_emissary_7000_otls_emissary
                          route:
                            cluster: >-
                              cluster_https___http3_service_emissary_7000_otls_emissary
                            prefix_rewrite: /
                            priority: null
                            timeout: 3.000s
                        - match:
                            case_sensitive: true
                            prefix: /
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_https___http3_service_emissary_7000_otls_emissary
                          redirect:
                            https_redirect: true
                server_name: envoy
                stat_prefix: ingress_https
                use_remote_address: true
          name: httpshost-http3-host
          transport_socket:
            name: envoy.transport_sockets.quic
            typed_config:
              '@type': >-
                type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
              downstream_tls_context:
                common_tls_context:
                  tls_certificates:
                    - certificate_chain:
                        filename: >-
                          /ambassador/snapshots/emissary/secrets-decoded/tls-secret/B832AF12D65E6DFA23E8546C1192F5E0C5A4AF94.crt
                      private_key:
                        filename: >-
                          /ambassador/snapshots/emissary/secrets-decoded/tls-secret/B832AF12D65E6DFA23E8546C1192F5E0C5A4AF94.key
                  tls_params:
                    tls_minimum_protocol_version: TLSv1_3
                  validation_context:
                    trusted_ca:
                      filename: /etc/custom-ca-cert/ca.pem
      name: emissary-ingress-https-listener-udp
      traffic_direction: UNSPECIFIED
      udp_listener_config:
        downstream_socket_config:
          prefer_gro: true
        quic_options: {}
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8443
          protocol: TCP
      filter_chains:
        - filter_chain_match:
            transport_protocol: tls
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      log_format:
                        text_format_source:
                          inline_string: >
                            ACCESS [%START_TIME%] "%REQ(:METHOD)%
                            %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
                            %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED%
                            %BYTES_SENT% %DURATION%
                            %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                            "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%"
                            "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%"
                            "%UPSTREAM_HOST%"
                      path: /dev/fd/1
                http3_protocol_options: {}
                http_filters:
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
                http_protocol_options:
                  accept_http_10: false
                normalize_path: true
                preserve_external_request_id: false
                route_config:
                  virtual_hosts:
                    - domains:
                        - '*'
                      name: emissary-ingress-https-listener-*
                      response_headers_to_add:
                        - header:
                            key: alt-svc
                            value: 'h3=":443"; ma=86400, h3-29=":443"; ma=86400'
                      routes:
                        - match:
                            case_sensitive: true
                            headers:
                              - exact_match: https
                                name: x-forwarded-proto
                            prefix: /ambassador/v0/check_ready
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          route:
                            cluster: cluster_127_0_0_1_8877_emissary
                            prefix_rewrite: /ambassador/v0/check_ready
                            priority: null
                            timeout: 10.000s
                        - match:
                            case_sensitive: true
                            prefix: /ambassador/v0/check_ready
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          redirect:
                            https_redirect: true
                        - match:
                            case_sensitive: true
                            headers:
                              - exact_match: https
                                name: x-forwarded-proto
                            prefix: /ambassador/v0/check_alive
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          route:
                            cluster: cluster_127_0_0_1_8877_emissary
                            prefix_rewrite: /ambassador/v0/check_alive
                            priority: null
                            timeout: 10.000s
                        - match:
                            case_sensitive: true
                            prefix: /ambassador/v0/check_alive
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          redirect:
                            https_redirect: true
                        - match:
                            case_sensitive: true
                            headers:
                              - exact_match: https
                                name: x-forwarded-proto
                            prefix: /
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_https___http3_service_emissary_7000_otls_emissary
                          route:
                            cluster: >-
                              cluster_https___http3_service_emissary_7000_otls_emissary
                            prefix_rewrite: /
                            priority: null
                            timeout: 3.000s
                        - match:
                            case_sensitive: true
                            prefix: /
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_https___http3_service_emissary_7000_otls_emissary
                          redirect:
                            https_redirect: true
                server_name: envoy
                stat_prefix: ingress_https
                use_remote_address: true
          name: httpshost-http3-host
          transport_socket:
            name: envoy.transport_sockets.tls
            typed_config:
              '@type': >-
                type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
              common_tls_context:
                tls_certificates:
                  - certificate_chain:
                      filename: >-
                        /ambassador/snapshots/emissary/secrets-decoded/tls-secret/B832AF12D65E6DFA23E8546C1192F5E0C5A4AF94.crt
                    private_key:
                      filename: >-
                        /ambassador/snapshots/emissary/secrets-decoded/tls-secret/B832AF12D65E6DFA23E8546C1192F5E0C5A4AF94.key
                tls_params:
                  tls_minimum_protocol_version: TLSv1_3
                validation_context:
                  trusted_ca:
                    filename: /etc/custom-ca-cert/ca.pem
        - filter_chain_match: {}
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      log_format:
                        text_format_source:
                          inline_string: >
                            ACCESS [%START_TIME%] "%REQ(:METHOD)%
                            %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
                            %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED%
                            %BYTES_SENT% %DURATION%
                            %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%
                            "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%"
                            "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%"
                            "%UPSTREAM_HOST%"
                      path: /dev/fd/1
                http3_protocol_options: {}
                http_filters:
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
                http_protocol_options:
                  accept_http_10: false
                normalize_path: true
                preserve_external_request_id: false
                route_config:
                  virtual_hosts:
                    - domains:
                        - '*'
                      name: emissary-ingress-https-listener-*
                      response_headers_to_add:
                        - header:
                            key: alt-svc
                            value: 'h3=":443"; ma=86400, h3-29=":443"; ma=86400'
                      routes:
                        - match:
                            case_sensitive: true
                            headers:
                              - exact_match: https
                                name: x-forwarded-proto
                            prefix: /ambassador/v0/check_ready
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          route:
                            cluster: cluster_127_0_0_1_8877_emissary
                            prefix_rewrite: /ambassador/v0/check_ready
                            priority: null
                            timeout: 10.000s
                        - match:
                            case_sensitive: true
                            prefix: /ambassador/v0/check_ready
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          redirect:
                            https_redirect: true
                        - match:
                            case_sensitive: true
                            headers:
                              - exact_match: https
                                name: x-forwarded-proto
                            prefix: /ambassador/v0/check_alive
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          route:
                            cluster: cluster_127_0_0_1_8877_emissary
                            prefix_rewrite: /ambassador/v0/check_alive
                            priority: null
                            timeout: 10.000s
                        - match:
                            case_sensitive: true
                            prefix: /ambassador/v0/check_alive
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_127_0_0_1_8877_emissary
                          redirect:
                            https_redirect: true
                        - match:
                            case_sensitive: true
                            headers:
                              - exact_match: https
                                name: x-forwarded-proto
                            prefix: /
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_https___http3_service_emissary_7000_otls_emissary
                          route:
                            cluster: >-
                              cluster_https___http3_service_emissary_7000_otls_emissary
                            prefix_rewrite: /
                            priority: null
                            timeout: 3.000s
                        - match:
                            case_sensitive: true
                            prefix: /
                            runtime_fraction:
                              default_value:
                                denominator: HUNDRED
                                numerator: 100
                              runtime_key: >-
                                routing.traffic_shift.cluster_https___http3_service_emissary_7000_otls_emissary
                          redirect:
                            https_redirect: true
                server_name: envoy
                stat_prefix: ingress_https
                use_remote_address: true
          name: httphost-shared
      listener_filters:
        - name: envoy.filters.listener.tls_inspector
      name: emissary-ingress-https-listener
      traffic_direction: UNSPECIFIED
    - address:
        socket_address:
          address: 127.0.0.1
          port_value: 8006
          protocol: TCP
      filter_chains:
        - filter_chain_match: {}
          filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                http_filters:
                  - name: envoy.filters.http.health_check
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      headers:
                        - exact_match: /ready
                          name: ':path'
                      pass_through_mode: false
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                stat_prefix: ready_http
      name: ambassador-listener-ready-127.0.0.1-8006
